# SudokuAI

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README_CN.md  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
data/: llm_configs.json  sample_games.json  test_cases.json
logs/: play_easy_1_gemma3:4b_20260323_194550.json  play_game_20260323_200022_gemma3:1b_20260323_200025.json  play_test_001_gemma3:4b_20260323_194252.json  play_test_1b_gemma3:1b_20260323_194614.json
sudokuai/: __init__.py  __main__.py  api.py  app.py  cli.py  core.py  gui.py
sudokuai/llm/: __init__.py  client.py  evaluator.py  player.py  prompts.py  recorder.py
sudokuai/llm/providers/: __init__.py  base.py  custom.py  ollama.py  openai_compatible.py
sudokuai/report/: __init__.py  generator.py  templates.py
sudokuai/sudoku/: __init__.py  board.py  generator.py  solver.py  validator.py
sudokuai/templates/: index.html
tests/: conftest.py  test_core.py
