[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudokuai"
dynamic = ["version"]
description = "SudokuAI - LLM-powered Sudoku game and evaluation platform"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "SudokuAI Team"}
]
keywords = ["sudoku", "llm", "evaluation", "ai", "game", "puzzle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "PySide6>=6.5.0",
    "Flask>=3.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
sudokuai = "sudokuai.cli:main"

[project.urls]
Homepage = "https://github.com/user/sudokuai"
Documentation = "https://github.com/user/sudokuai#readme"
Repository = "https://github.com/user/sudokuai.git"

[tool.setuptools]
packages = ["sudokuai", "sudokuai.sudoku", "sudokuai.llm", "sudokuai.llm.providers", "sudokuai.report"]

[tool.setuptools.dynamic]
version = {attr = "sudokuai.__version__"}

[tool.setuptools.package-data]
sudokuai = ["templates/*.html"]